Working section-4 both

--- a/app/index.html
+++ b/app/index.html
@@ -84,25 +84,27 @@
         </div>
     </div>
 
+
     <!--Section 4-->
     <div class="section section-4">
-        <div class="new-design container-column">
-            <div class="section-4-title">
-                <p class="exo-medium-font pink uppercase">New design</p>
-                <h3 class="exo-medium-font mid-header">Resposive design, just need your tap <span
-                        class="pink">....</span>
+            <div class="new-design container-column">
+                <div class="section-4-title">
+                    <p class="exo-medium-font pink uppercase">New design</p>
+                    <h3 class="exo-medium-font mid-header">Resposive design, just need your tap <span
+                            class="pink">....</span>
 
-                </h3>
-                <p class="exo-medium-font gray section-4-paragraph">Aeque audire repudiandae mea ne, vitae persius in
-                    cum. Nam gloriatur
-                    persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
-                    delicatissimi et eam.
-                </p>
+                    </h3>
+                    <p class="exo-medium-font gray section-4-paragraph">Aeque audire repudiandae mea ne, vitae persius
+                        in
+                        cum. Nam gloriatur
+                        persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
+                        delicatissimi et eam.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="section-4-macbook">
-            <img class="img" src="./images/macbook.png">
-        </div>
+            <div class="section-4-macbook">
+                <img class="img" src="./images/macbook.png">
+            </div>
     </div>
 
 
