Working section 5 both

--- a/app/index.html
+++ b/app/index.html
@@ -109,29 +109,29 @@
 
 
     <!--Section 5-->
-    <div class="section container-column section-5">
-        <div class="container-row center wrap-items">
-            <div class="container-column center feature-card">
-                <img src="images/Rectangle_28.png">
-                <p class="exo-medium-font">Jonthon Doe</p>
+    <div class="section flex-row section-5">
+        <div class="flex-row center wrap-items">
+            <div class="center feature-card">
+                <img class="section-5-avatar" src="images/Rectangle_28.png">
+                <p class="section-5-name exo-medium-font white">Jonthon Doe</p>
                 <p class="exo-medium-font pink">Co-founder</p>
                 <div class="exo-medium-font gray">Aeque audire repudiandae mea ne, vitae persius in cum. Nam gloriatur
                     persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
                     delicatissimi et eam.
                 </div>
             </div>
-            <div class="container-column center feature-card">
-                <img src="images/Rectangle_28.png">
-                <p class="exo-medium-font">Jonthon Doe</p>
+            <div class="center feature-card">
+                <img class="section-5-avatar" src="images/Rectangle_28.png">
+                <p class="section-5-name exo-medium-font white">Jonthon Doe</p>
                 <p class="exo-medium-font pink">Co-founder</p>
                 <div class="exo-medium-font gray">Aeque audire repudiandae mea ne, vitae persius in cum. Nam gloriatur
                     persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
                     delicatissimi et eam.
                 </div>
             </div>
-            <div class="container-column center feature-card">
-                <img src="images/Rectangle_28.png">
-                <p class="exo-medium-font">Jonthon Doe</p>
+            <div class="center feature-card">
+                <img class="section-5-avatar" src="images/Rectangle_28.png">
+                <p class="section-5-name exo-medium-font white">Jonthon Doe</p>
                 <p class="exo-medium-font pink">Co-founder</p>
                 <div class="exo-medium-font gray">Aeque audire repudiandae mea ne, vitae persius in cum. Nam gloriatur
                     persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
