Section 7 withpit label

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,8 @@
 
 
     <!--SECTION 2-->
-    <div class="section section-2">
+    <div class="section-2">
+        <div class="triangle"></div>
         <div class="section-2-description">
             <span class="section-2-label">
                 New design
@@ -51,7 +52,7 @@
 
 
     <!--Section 3-->
-    <div class="section section-3">
+    <div class="section-3">
         <div class="feature-title">
             <p class="exo-medium-font pink uppercase margin-0">new features</p>
             <h3 class="exo-medium-font mid-header">Some awesome features</h3>
@@ -109,7 +110,7 @@
 
 
     <!--Section 5-->
-    <div class="section flex-row section-5">
+    <div class="section flex-column section-5">
         <div class="flex-row center wrap-items">
             <div class="center feature-card">
                 <img class="section-5-avatar" src="images/Rectangle_28.png">
@@ -139,6 +140,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="flex-row wrap-items">
+            <img src="images/partner-logo-1.png" class="partner-image">
+            <img src="images/partner-logo-4.png" class="partner-image">
+            <img src="images/partner-logo-5.png" class="partner-image">
+            <img src="images/partner-logo-7.png" class="partner-image">
+            <img src="images/partner-logo-8.png" class="partner-image">
+        </div>
     </div>
 
     <!--Section 6-->
@@ -147,15 +156,15 @@
             <div class="section-6-title">
                 <p class="exo-medium-font pink uppercase center">New features</p>
                 <h3 class="exo-medium-font mid-header center">Some awesome features</h3>
-                <p class="exo-medium-font gray section-4-paragraph">Aeque audire repudiandae mea ne, vitae persius in
+                <p class="exo-medium-font gray section-6-paragraph">Aeque audire repudiandae mea ne, vitae persius in
                     cum. Nam gloriatur
                     persequeris in, audiam constituto qui at, ius te animal lucilius salutatus. Labitur delenit
                     delicatissimi et eam.
                 </p>
             </div>
         </div>
-        <div class="section-4-macbook">
-            <img class="img" src="./images/macbook.png">
+        <div class="section-6-browser">
+            <img class="img" src="./images/browser.png">
         </div>
     </div>
 
@@ -167,7 +176,7 @@
                 <p class="exo-medium-font pink uppercase center">New features</p>
                 <h3 class="exo-medium-font white mid-header center">Over 1000 designer are using ...</h3>
             </div>
-            <form class="sign-up-form">
+            <form class="signup-form">
                 <div class="flex-row center wrap-items">
                     <input type="text"
                            class="signup-input transparent-background white placeholder-white placeholder-uppercase"
@@ -181,6 +190,7 @@
                     <button type="submit" class="white signup-button uppercase">Try now</button>
                 </div>
             </form>
+            <p class="exo-regular-font center section-7-terms">By Signing up you agree to our terms & Services.</p>
         </div>
     </div>
 
