--- a/app/index.html
+++ b/app/index.html
@@ -153,11 +153,11 @@
         </div>
 
         <div class="flex-row wrap-items section-5-partners">
-            <img src="img/partner-logo-1.png" class="partner-image">
-            <img src="img/partner-logo-4.png" class="partner-image">
-            <img src="img/partner-logo-5.png" class="partner-image">
-            <img src="img/partner-logo-7.png" class="partner-image">
-            <img src="img/partner-logo-8.png" class="partner-image">
+            <a href="#"><img src="img/partner-logo-1.png" class="partner-image"></a>
+            <a href="#"><img src="img/partner-logo-4.png" class="partner-image"></a>
+            <a href="#"><img src="img/partner-logo-5.png" class="partner-image"></a>
+            <a href="#"><img src="img/partner-logo-7.png" class="partner-image"></a>
+            <a href="#"><img src="img/partner-logo-8.png" class="partner-image"></a>
         </div>
     </div>
 
@@ -224,7 +224,8 @@
                 <div class="footer__description gray">
                     <div>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.</div>
                     <div>USA & CAN: <a href="tel:1-888-123-4567" class="footer__tel">1-888-123-4567</a></div>
-                    <div>Address: <a class="footer__address" target="_blank" href="https://goo.gl/maps/sRzJpxJyL58WHApo6">34 Brokel Rd. NY</a></div>
+                    <div>Address: <a class="footer__address" target="_blank"
+                                     href="https://goo.gl/maps/sRzJpxJyL58WHApo6">34 Brokel Rd. NY</a></div>
                 </div>
             </div>
 
@@ -254,6 +255,12 @@
                     <img class="footer__send-button" src="img/send_icon.png">
                 </div>
 
+                <div class="flex-row wrap-items footer__social">
+                    <a href="#"><img src="img/dribbble_S.png" class="partner-image"></a>
+                    <a href="#"><img src="img/facebook_S.png" class="partner-image"></a>
+                    <a href="#"><img src="img/googleplus_S.png" class="partner-image"></a>
+                    <a href="#"><img src="img/twitter_S.png" class="partner-image"></a>
+                </div>
             </div>
         </div>
     </div>
